[package]
name = "namespacedkey"
version = "0.0.3"
edition = "2024"
authors = ["kokiriglade <git@kokirigla.de>"]
description = "NamespacedKey is an identifier composed of a namespace and a path"
license = "MIT"
repository = "https://github.com/kokiriglade/namespacedkey"
readme = "README.md"

[lib]

[dependencies]
unicode-width = "0.2.0"
