[package]
name = "namespacedkey"
version = "1.0.0"
exclude = ["tools/", "crates/", ".github/"]
edition = "2024"
authors = ["kokiriglade <git@kokirigla.de>"]
description = "NamespacedKey is an identifier composed of a namespace and a path"
license = "MIT"
repository = "https://github.com/kokiriglade/namespacedkey"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
namespacedkey_core = { default-features = false, features = [
    "serde",
], path = "crates/namespacedkey_core", version = "1.0.0" }
namespacedkey_macro = { path = "crates/namespacedkey_macro", version = "1.0.0", optional = true }

[features]
default = []
macro = ["dep:namespacedkey_macro"]
serde = ["namespacedkey_core/serde"]

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
internment = "0.8"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full"] }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_imports = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
clone_on_copy = "warn"
redundant_clone = "warn"
float_cmp = "warn"
large_stack_arrays = "warn"
print_stdout = "warn"
print_stderr = "warn"
mod_module_files = "warn"
