[package]
name = "namespacedkey_core"
version = "1.0.0"
edition = "2024"
authors = ["kokiriglade <git@kokirigla.de>"]
description = "Identifiers composed of a namespace and a value"
license = "MIT"
repository = "https://github.com/kokiriglade/namespacedkey"
rust-version = "1.88.0"

[dependencies]
internment.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
